Check coverage on file basis

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"test:unit": "npm run test:unit:base -- src/**/*.spec.js",
 		"test": "npm run lint && npm run test:unit && npm run coverage",
 		"clean": "rimraf build dist",
-		"coverage": "nyc check-coverage",
+		"coverage": "nyc check-coverage --per-file",
 		"build:transpile": "babel src --source-maps --out-dir=dist --minified",
 		"build": "npm run clean && npm run build:transpile && npm run check-deps",
 		"watch": "cross-env DEBUG=1 NODE_ENV=test chokidar src -c 'npm test && npm run coverage'",
