--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	},
 	"dependencies": {
 		"@natlibfi/marc-record": "^3.0.0",
+		"ora": "^3.0.0",
 		"stream-json": "^1.1.1",
 		"text-encoding": ">=0.6.4 <1.0.0",
 		"xmldom": "^0.1.27"
