--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
 		"publish-to-npm": "npm install && npm test && npm run coverage && npm publish --access=public"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^4.0.0",
+		"@natlibfi/marc-record": "^4.0.1",
 		"ora": "^3.0.0",
-		"stream-json": "^1.1.1",
-		"text-encoding": ">=0.6.4 <1.0.0",
-		"xmldom": "^0.1.27"
+		"stream-json": "^1.1.3",
+		"text-encoding": "^0.7.0",
+		"xmldom": "^0.1.27",
+		"yargs": "^12.0.5"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
@@ -57,9 +58,9 @@
 		"babel-register": "^6.26.0",
 		"chai": "^4.1.2",
 		"chokidar-cli": "^1.2.0",
-		"codeclimate-test-reporter": ">=0.5.0 <1.0.0",
+		"codeclimate-test-reporter": "^0.5.1",
 		"cross-env": "^5.2.0",
-		"eslint": "^5.2.0",
+		"eslint": "^5.9.0",
 		"eslint-config-xo": ">=0.24.1 <1.0.0",
 		"eslint-plugin-import": "^2.13.0",
 		"eslint-plugin-mocha": "^5.1.0",
