--- a/.drone.yml
+++ b/.drone.yml
@@ -16,9 +16,13 @@ steps:
   image: node:12
   commands: ['npm test']
 
+- name: build
+  image: node:12
+  commands: ['npm run build']
+
 - name: static-security-scan
   image: quay.io/natlibfi/nodejsscan
-  commands: ['python /usr/src/app/cli.py -d src']
+  commands: ['python /usr/src/app/cli.py -d dist']
 
 - name: npm-publish
   image: plugins/npm
@@ -34,6 +38,6 @@ name: npm_token
 data: 57r1iBfIVFGrmpGB+wayB9QvaSRFFNtnohL1IKLT5isAsCIlSzOcYv4NWdPijJTnL7vzoFpD/h75U9N5pKM9cA==
 ---
 kind: signature
-hmac: a4fc38086272230862589908e01b6f706c6291571e1ff4d175f757c81c7b0a5a
+hmac: f81dafb1d474d531b0bfc5f693180014f77c8a8e706d225335a95a1e837c6b9f
 
 ...
