--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"url": "git@github.com:natlibfi/marc-record-serializers.git"
 	},
 	"license": "MIT",
-	"version": "6.2.1",
+	"version": "7.0.0",
 	"main": "./dist/index.js",
 	"bin": "./dist/cli.js",
 	"engines": {
@@ -45,28 +45,29 @@
 		"watch:serializer": "cross-env DEBUG=1 NODE_ENV=test chokidar src/$SERIALIZER.js src/$SERIALIZER.spec.js -c 'npm run lint:base:dev -- src/$SERIALIZER.js src/$SERIALIZER.spec.js && npm run test:unit:base -- src/$SERIALIZER.spec.js'"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^4.0.4",
-		"ora": "^4.0.4",
-		"stream-json": "^1.5.0",
-		"text-encoding": ">=0.7.0 <1.0.0",
+		"@natlibfi/marc-record": "^6.0.2",
+		"ora": "^5.0.0",
+		"stream-json": "^1.7.1",
+		"text-encoding": "^0.7.0",
+		"xml2js": "^0.4.23",
 		"xmldom": "^0.3.0",
-		"yargs": "^15.3.1"
+		"yargs": "^15.4.1"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.10.1",
-		"@babel/core": "^7.10.2",
-		"@babel/preset-env": "^7.10.2",
-		"@babel/register": "^7.10.1",
+		"@babel/cli": "^7.10.5",
+		"@babel/core": "^7.11.1",
+		"@babel/preset-env": "^7.11.0",
+		"@babel/register": "^7.10.5",
 		"babel-eslint": "^10.1.0",
 		"babel-plugin-istanbul": "^6.0.0",
-		"chai": "^4.1.2",
-		"chokidar-cli": "^2.0.0",
+		"chai": "^4.2.0",
+		"chokidar-cli": "^2.1.0",
 		"cross-env": "^7.0.2",
-		"eslint": "^7.2.0",
-		"eslint-config-xo": "^0.30.0",
-		"eslint-plugin-import": "^2.21.1",
-		"eslint-plugin-mocha": "^7.0.1",
-		"mocha": "^7.2.0",
+		"eslint": "^7.7.0",
+		"eslint-config-xo": "^0.32.1",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-mocha": "^8.0.0",
+		"mocha": "^8.1.1",
 		"npm-check": "^5.9.2",
 		"nyc": "^15.1.0",
 		"rimraf": "^3.0.2"
