--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"url": "git@github.com:natlibfi/marc-record-serializers.git"
 	},
 	"license": "MIT",
-	"version": "7.1.3-alpha.1",
+	"version": "7.1.3",
 	"main": "./dist/index.js",
 	"bin": "./dist/cli.js",
 	"engines": {
