--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 		"stream-json": "^1.7.1",
 		"text-encoding": "^0.7.0",
 		"xml2js": "^0.4.23",
-		"xmldom": "^0.6.0",
+		"xmldom": "github:xmldom/xmldom#0.7.0",
 		"yargs": "^15.4.1"
 	},
 	"devDependencies": {
