--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 		"stream-json": "^1.7.1",
 		"text-encoding": "^0.7.0",
 		"xml2js": "^0.4.23",
-		"xmldom": "^0.5.0",
+		"xmldom": "github:xmldom/xmldom#0.7.0",
 		"yargs": "^15.4.1"
 	},
 	"devDependencies": {
@@ -65,12 +65,12 @@
 		"chai": "^4.2.0",
 		"chokidar-cli": "^2.1.0",
 		"cross-env": "^7.0.2",
+		"debug": "^4.3.2",
 		"eslint": "^7.7.0",
 		"eslint-config-xo": "^0.32.1",
 		"eslint-plugin-import": "^2.22.0",
 		"eslint-plugin-mocha": "^8.0.0",
 		"mocha": "^8.1.1",
-		"npm-check": "^5.9.2",
 		"nyc": "^15.1.0",
 		"rimraf": "^3.0.2"
 	},
