--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"url": "git@github.com:natlibfi/marc-record-serializers.git"
 	},
 	"license": "MIT",
-	"version": "7.2.7",
+	"version": "7.2.8",
 	"main": "./dist/index.js",
 	"bin": {
 		"marc-record-serializers": "dist/cli.js"
@@ -52,7 +52,7 @@
 		"stream-json": "^1.7.1",
 		"text-encoding": "^0.7.0",
 		"xml2js": "^0.4.23",
-		"xmldom": "git+https://github.com/xmldom/xmldom.git",
+		"@xmldom/xmldom": "^0.7.1",
 		"yargs": "^15.4.1"
 	},
 	"devDependencies": {
