--- a/package.json
+++ b/package.json
@@ -42,31 +42,28 @@
 		"test": "npm run lint && npm run test:unit && npm run coverage",
 		"test:dev": "npm run lint:dev && npm run test:unit && npm run coverage",
 		"coverage": "nyc check-coverage --per-file",
-		"build": "babel src --delete-dir-on-start --source-maps --out-dir=dist",
-		"watch": "cross-env DEBUG=1 NODE_ENV=test chokidar src -c 'npm test:dev && npm run coverage'",
-		"watch:serializer": "cross-env DEBUG=1 NODE_ENV=test chokidar src/$SERIALIZER.js src/$SERIALIZER.spec.js -c 'npm run lint:base:dev -- src/$SERIALIZER.js src/$SERIALIZER.spec.js && npm run test:unit:base -- src/$SERIALIZER.spec.js'"
+		"build": "babel src --delete-dir-on-start --source-maps --out-dir=dist"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^6.0.3",
+		"@natlibfi/marc-record": "^6.1.2",
 		"ora": "^5.0.0",
 		"stream-json": "^1.7.1",
 		"text-encoding": "^0.7.0",
 		"xml2js": "^0.4.23",
-		"@xmldom/xmldom": "^0.7.1",
+		"@xmldom/xmldom": "^0.7.2",
 		"yargs": "^15.4.1"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.10.5",
-		"@babel/core": "^7.11.1",
-		"@babel/preset-env": "^7.11.0",
-		"@babel/register": "^7.10.5",
-		"babel-eslint": "^10.1.0",
+		"@babel/cli": "^7.14.8",
+		"@babel/core": "^7.15.0",
+		"@babel/eslint-parser": "^7.15.0",
+		"@babel/preset-env": "^7.15.0",
+		"@babel/register": "^7.15.3",
 		"babel-plugin-istanbul": "^6.0.0",
-		"chai": "^4.2.0",
-		"chokidar-cli": "^2.1.0",
-		"cross-env": "^7.0.2",
+		"chai": "^4.3.4",
+		"cross-env": "^7.0.3",
 		"debug": "^4.3.2",
-		"eslint": "^7.7.0",
+		"eslint": "^7.32.0",
 		"eslint-config-xo": "^0.32.1",
 		"eslint-plugin-import": "^2.22.0",
 		"eslint-plugin-mocha": "^8.0.0",
