--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"marc-record-serializers": "dist/cli.js"
 	},
 	"engines": {
-		"node": ">=12"
+		"node": ">=14"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -36,17 +36,17 @@
 		"lint:base:dev": "eslint --fix",
 		"lint:base": "eslint",
 		"lint": "npm run lint:base -- src",
-		"lint:dev": "npm run lint:base:dev -- src",
+		"lint:dev": "eslint --fix src",
 		"test:unit:base": "cross-env NODE_ENV=test nyc -x src/**/*.spec.js mocha --require @babel/register",
 		"test:unit": "npm run test:unit:base -- src/**/*.spec.js",
-		"test": "npm run lint && npm run test:unit && npm run coverage",
+		"test": "npm run test:unit && npm run coverage",
 		"test:dev": "npm run lint:dev && npm run test:unit && npm run coverage",
 		"coverage": "nyc check-coverage --per-file",
 		"build": "babel src --delete-dir-on-start --source-maps --out-dir=dist"
 	},
 	"dependencies": {
 		"@natlibfi/marc-record": "^6.1.2",
-		"ora": "^5.0.0",
+		"ora": "^6.0.1",
 		"stream-json": "^1.7.3",
 		"text-encoding": "^0.7.0",
 		"xml2js": "^0.4.23",
@@ -64,39 +64,23 @@
 		"cross-env": "^7.0.3",
 		"debug": "^4.3.2",
 		"eslint": "^7.32.0",
-		"eslint-config-xo": "^0.39.0",
-		"eslint-plugin-import": "^2.25.1",
-		"eslint-plugin-mocha": "^9.0.0",
+		"@natlibfi/eslint-config-melinda-backend": "^1.1.1",
 		"mocha": "^9.1.2",
 		"nyc": "^15.1.0",
 		"rimraf": "^3.0.2"
 	},
 	"eslintConfig": {
 		"parser": "@babel/eslint-parser",
-		"plugins": [
-			"import"
-		],
 		"extends": [
-			"xo",
-			"plugin:import/errors"
-		],
-		"rules": {
-			"prefer-arrow-callback": [
-				"error"
-			]
-		},
-		"env": {
-			"mocha": true
-		}
+			"@natlibfi/melinda-backend"
+		]
 	},
 	"babel": {
 		"presets": [
 			[
 				"@babel/preset-env",
 				{
-					"targets": {
-						"node": "12"
-					}
+					"targets": "maintained node versions"
 				}
 			]
 		],
