--- a/package.json
+++ b/package.json
@@ -45,29 +45,29 @@
 		"build": "babel src --delete-dir-on-start --source-maps --out-dir=dist"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^6.1.2",
+		"@natlibfi/marc-record": "^7.1.0-alpha.2",
 		"ora": "^5.0.0",
-		"stream-json": "^1.7.3",
+		"stream-json": "^1.7.4",
 		"text-encoding": "^0.7.0",
 		"xml2js": "^0.4.23",
-		"@xmldom/xmldom": "^0.7.5",
-		"yargs": "^17.2.1"
+		"@xmldom/xmldom": "^0.8.2",
+		"yargs": "^17.5.1"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.15.7",
-		"@babel/core": "^7.15.8",
-		"@babel/eslint-parser": "^7.15.8",
-		"@babel/preset-env": "^7.15.8",
-		"@babel/register": "^7.15.3",
-		"babel-plugin-istanbul": "^6.0.0",
-		"chai": "^4.3.4",
+		"@babel/cli": "^7.17.10",
+		"@babel/core": "^7.18.2",
+		"@babel/eslint-parser": "^7.18.2",
+		"@babel/preset-env": "^7.18.2",
+		"@babel/register": "^7.17.7",
+		"babel-plugin-istanbul": "^6.1.1",
+		"chai": "^4.3.6",
 		"cross-env": "^7.0.3",
-		"debug": "^4.3.2",
-		"eslint": "^7.32.0",
-		"eslint-config-xo": "^0.39.0",
-		"eslint-plugin-import": "^2.25.1",
-		"eslint-plugin-mocha": "^9.0.0",
-		"mocha": "^9.1.2",
+		"debug": "^4.3.4",
+		"eslint": "^8.17.0",
+		"eslint-config-xo": "^0.41.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-mocha": "^10.0.5",
+		"mocha": "^10.0.0",
 		"nyc": "^15.1.0",
 		"rimraf": "^3.0.2"
 	},
