--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"url": "git@github.com:natlibfi/marc-record-serializers.git"
 	},
 	"license": "MIT",
-	"version": "8.1.0",
+	"version": "9.0.0-alpha.4",
 	"main": "./dist/index.js",
 	"bin": {
 		"marc-record-serializers": "dist/cli.js"
@@ -46,27 +46,26 @@
 		"build": "babel src --delete-dir-on-start --source-maps --out-dir=dist"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^6.1.2",
-		"@xmldom/xmldom": "^0.7.5",
-		"stream-json": "^1.7.3",
+		"@natlibfi/marc-record": "^7.2.1",
+		"@xmldom/xmldom": ">=0.8.2 <1.0.0",
+		"stream-json": "^1.7.4",
 		"xml2js": ">=0.4.23 <1.0.0",
-		"yargs": "^17.2.1"
+		"yargs": "^17.6.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.15.7",
-		"@babel/core": "^7.15.8",
-		"@babel/eslint-parser": "^7.15.8",
-		"@babel/preset-env": "^7.15.8",
-		"@babel/register": "^7.15.3",
-		"@natlibfi/eslint-config-melinda-backend": "^1.1.1",
+		"@babel/cli": "^7.19.3",
+		"@babel/core": "^7.19.3",
+		"@babel/eslint-parser": "^7.19.1",
+		"@babel/preset-env": "^7.19.3",
+		"@babel/register": "^7.18.9",
+		"@natlibfi/eslint-config-melinda-backend": "^2.0.1",
 		"babel-plugin-istanbul": "^6.1.1",
-		"chai": "^4.3.4",
+		"chai": "^4.3.6",
 		"cross-env": "^7.0.3",
-		"debug": "^4.3.2",
-		"eslint": "^7.32.0",
-		"mocha": "^9.1.3",
-		"nyc": "^15.1.0",
-		"rimraf": "^3.0.2"
+		"debug": "^4.3.4",
+		"eslint": "^8.24.0",
+		"mocha": "^10.0.0",
+		"nyc": "^15.1.0"
 	},
 	"eslintConfig": {
 		"parser": "@babel/eslint-parser",
