--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 	},
 	"dependencies": {
 		"@natlibfi/marc-record": "^7.2.2",
-		"@xmldom/xmldom": ">=0.8.3 <1.0.0",
+		"@xmldom/xmldom": "^0.8.5",
 		"stream-json": "^1.7.4",
 		"xml2js": ">=0.4.23 <1.0.0",
 		"yargs": "^17.6.0"
