--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
 	},
 	"dependencies": {
 		"@natlibfi/marc-record": "^7.2.2",
-		"@xmldom/xmldom": ">=0.8.3 <1.0.0",
+		"@xmldom/xmldom": "^0.8.5",
 		"stream-json": "^1.7.4",
 		"xml2js": ">=0.4.23 <1.0.0",
 		"yargs": "^17.6.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.19.3",
-		"@babel/core": "^7.19.3",
+		"@babel/core": "^7.19.6",
 		"@babel/eslint-parser": "^7.19.1",
 		"@babel/preset-env": "^7.19.4",
 		"@babel/register": "^7.18.9",
@@ -63,7 +63,7 @@
 		"chai": "^4.3.6",
 		"cross-env": "^7.0.3",
 		"debug": "^4.3.4",
-		"eslint": "^8.25.0",
+		"eslint": "^8.26.0",
 		"mocha": "^10.1.0",
 		"nyc": "^15.1.0"
 	},
