--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"url": "git@github.com:natlibfi/marc-record-serializers.git"
 	},
 	"license": "MIT",
-	"version": "10.0.2",
+	"version": "10.0.3-alpha.3",
 	"main": "./dist/index.js",
 	"bin": {
 		"marc-record-serializers": "dist/cli.js"
@@ -47,23 +47,23 @@
 	},
 	"dependencies": {
 		"@natlibfi/marc-record": "^7.2.2",
-		"@xmldom/xmldom": "^0.8.6",
+		"@xmldom/xmldom": "^0.8.7",
 		"stream-json": "^1.7.5",
-		"xml2js": ">=0.4.23 <1.0.0",
+		"xml2js": ">=0.5.0 <1.0.0",
 		"yargs": "^17.7.1"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.21.0",
-		"@babel/core": "^7.21.0",
-		"@babel/eslint-parser": "^7.19.1",
-		"@babel/preset-env": "^7.20.2",
+		"@babel/core": "^7.21.4",
+		"@babel/eslint-parser": "^7.21.3",
+		"@babel/preset-env": "^7.21.4",
 		"@babel/register": "^7.21.0",
 		"@natlibfi/eslint-config-melinda-backend": "^2.0.2",
 		"babel-plugin-istanbul": "^6.1.1",
 		"chai": "^4.3.7",
 		"cross-env": "^7.0.3",
 		"debug": "^4.3.4",
-		"eslint": "^8.35.0",
+		"eslint": "^8.37.0",
 		"mocha": "^10.2.0",
 		"nyc": "^15.1.0"
 	},
