--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"url": "git@github.com:natlibfi/marc-record-serializers.git"
 	},
 	"license": "MIT",
-	"version": "10.0.6",
+	"version": "10.0.7-alpha.1",
 	"main": "./dist/index.js",
 	"bin": {
 		"marc-record-serializers": "dist/cli.js"
@@ -46,7 +46,7 @@
 		"build": "babel src --delete-dir-on-start --source-maps --out-dir=dist"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^7.2.2",
+		"@natlibfi/marc-record": "^7.2.4",
 		"@xmldom/xmldom": "^0.8.10",
 		"stream-json": "^1.8.0",
 		"xml2js": ">=0.6.2 <1.0.0",
@@ -58,12 +58,12 @@
 		"@babel/eslint-parser": "^7.22.9",
 		"@babel/preset-env": "^7.22.9",
 		"@babel/register": "^7.22.5",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.0",
+		"@natlibfi/eslint-config-melinda-backend": "^3.0.1",
 		"babel-plugin-istanbul": "^6.1.1",
 		"chai": "^4.3.7",
 		"cross-env": "^7.0.3",
 		"debug": "^4.3.4",
-		"eslint": "^8.45.0",
+		"eslint": "^8.46.0",
 		"mocha": "^10.2.0",
 		"nyc": "^15.1.0"
 	},
