--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.22.9",
-		"@babel/core": "^7.22.9",
-		"@babel/eslint-parser": "^7.22.9",
-		"@babel/preset-env": "^7.22.9",
-		"@babel/register": "^7.22.5",
+		"@babel/cli": "latest",
+		"@babel/core": "latest",
+		"@babel/eslint-parser": "latest",
+		"@babel/preset-env": "latest",
+		"@babel/register": "latest",
 		"@natlibfi/eslint-config-melinda-backend": "^3.0.1",
 		"babel-plugin-istanbul": "^6.1.1",
 		"chai": "^4.3.7",
