--- a/package.json
+++ b/package.json
@@ -46,24 +46,24 @@
 		"build": "babel src --delete-dir-on-start --source-maps --out-dir=dist"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^7.3.0",
+		"@natlibfi/marc-record": "^7.3.1",
 		"@xmldom/xmldom": "^0.8.10",
 		"stream-json": "^1.8.0",
 		"xml2js": ">=0.6.2 <1.0.0",
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
-		"@babel/cli": "latest",
-		"@babel/core": "latest",
-		"@babel/eslint-parser": "latest",
-		"@babel/preset-env": "latest",
-		"@babel/register": "latest",
+		"@babel/cli": "^7.22.10",
+		"@babel/core": "^7.22.11",
+		"@babel/eslint-parser": "^7.22.11",
+		"@babel/preset-env": "^7.22.10",
+		"@babel/register": "^7.22.5",
 		"@natlibfi/eslint-config-melinda-backend": "^3.0.1",
 		"babel-plugin-istanbul": "^6.1.1",
-		"chai": "^4.3.7",
+		"chai": "^4.3.8",
 		"cross-env": "^7.0.3",
 		"debug": "^4.3.4",
-		"eslint": "^8.47.0",
+		"eslint": "^8.48.0",
 		"mocha": "^10.2.0",
 		"nyc": "^15.1.0"
 	},
