--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"url": "git@github.com:natlibfi/marc-record-serializers.git"
 	},
 	"license": "MIT",
-	"version": "10.1.1",
+	"version": "10.1.2-alpha.3",
 	"main": "./dist/index.js",
 	"bin": {
 		"marc-record-serializers": "dist/cli.js"
@@ -46,29 +46,27 @@
 		"build": "babel src --delete-dir-on-start --source-maps --out-dir=dist"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^7.3.1",
+		"@natlibfi/marc-record": "^8.0.0",
 		"@xmldom/xmldom": "^0.8.10",
 		"stream-json": "^1.8.0",
-		"xml2js": ">=0.6.2 <1.0.0",
+		"xml2js": "^0.6.2",
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.22.10",
-		"@babel/core": "^7.22.11",
-		"@babel/eslint-parser": "^7.22.11",
-		"@babel/preset-env": "^7.22.10",
-		"@babel/register": "^7.22.5",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.1",
+		"@babel/cli": "^7.23.0",
+		"@babel/core": "^7.23.2",
+		"@babel/preset-env": "^7.23.2",
+		"@babel/register": "^7.22.15",
+		"@natlibfi/eslint-config-melinda-backend": "^3.0.3",
 		"babel-plugin-istanbul": "^6.1.1",
-		"chai": "^4.3.8",
+		"chai": "^4.3.10",
 		"cross-env": "^7.0.3",
 		"debug": "^4.3.4",
-		"eslint": "^8.48.0",
+		"eslint": "^8.52.0",
 		"mocha": "^10.2.0",
 		"nyc": "^15.1.0"
 	},
 	"eslintConfig": {
-		"parser": "@babel/eslint-parser",
 		"extends": [
 			"@natlibfi/melinda-backend"
 		]
