--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"build": "babel src --delete-dir-on-start --source-maps --out-dir=dist"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^9.0.2",
+		"@natlibfi/marc-record": "^9.1.0-alpha.2",
 		"@xmldom/xmldom": "^0.8.10",
 		"stream-json": "^1.8.0",
 		"xml2js": "^0.6.2",
