--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"url": "git@github.com:natlibfi/marc-record-serializers.git"
 	},
 	"license": "MIT",
-	"version": "10.1.3",
+	"version": "10.1.4-alpha.1",
 	"main": "./dist/index.js",
 	"bin": {
 		"marc-record-serializers": "dist/cli.js"
@@ -48,22 +48,22 @@
 	"dependencies": {
 		"@natlibfi/marc-record": "^9.1.1",
 		"@xmldom/xmldom": "^0.9.5",
-		"stream-json": "^1.8.0",
+		"stream-json": "^1.9.1",
 		"xml2js": "^0.6.2",
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.25.7",
-		"@babel/core": "^7.25.8",
-		"@babel/preset-env": "^7.25.8",
-		"@babel/register": "^7.25.7",
+		"@babel/cli": "^7.25.9",
+		"@babel/core": "^7.26.0",
+		"@babel/preset-env": "^7.26.0",
+		"@babel/register": "^7.25.9",
 		"@natlibfi/eslint-config-melinda-backend": "^3.0.5",
 		"babel-plugin-istanbul": "^7.0.0",
 		"chai": "^4.5.0",
 		"cross-env": "^7.0.3",
 		"debug": "^4.3.7",
 		"eslint": "^8.57.1",
-		"mocha": "^10.7.3",
+		"mocha": "^10.8.2",
 		"nyc": "^17.1.0"
 	},
 	"eslintConfig": {
