--- a/package.json
+++ b/package.json
@@ -11,104 +11,48 @@
 		}
 	],
 	"keywords": [],
-	"homepage": "https://github.com/natlibfi/marc-record-serializers",
+	"homepage": "https://www.npmjs.com/package/@natlibfi/marc-record-serializers",
 	"bugs": {
 		"url": "https://github.com/natlibfi/marc-record-serializers/issues"
 	},
 	"repository": {
-		"type": "git",
-		"url": "git@github.com:natlibfi/marc-record-serializers.git"
+		"url": "https://github.com/NatLibFi/marc-record-serializers"
 	},
 	"license": "MIT",
-	"version": "10.1.6",
+	"version": "11.0.0-alpha.3",
 	"main": "./dist/index.js",
+	"type": "module",
 	"bin": {
 		"marc-record-serializers": "dist/cli.js"
 	},
 	"engines": {
-		"node": ">=18"
+		"node": ">=22"
 	},
 	"publishConfig": {
 		"access": "public"
 	},
 	"scripts": {
 		"prepare": "npm run build",
-		"lint:base:dev": "eslint --fix",
-		"lint:base": "eslint",
-		"lint": "npm run lint:base -- src",
-		"lint:dev": "eslint --fix src",
-		"test:base": "cross-env NODE_ENV=test mocha --require=@babel/register src/*.spec.js",
+		"build": "esbuild src/**/*.js --sourcemap --platform=node --main-fields=main --outdir=dist --allow-overwrite --analyze",
+		"lint": "eslint ./src",
+		"lint:dev": "eslint --fix ./src",
+		"test:base": "node --test --experimental-test-coverage --test-reporter=spec './src/*.test.js' './src/**/*.test.js'",
 		"test": "npm run lint && npm run test:base",
-		"test:dev": "npm run lint:dev && npm run coverage",
-		"coverage": "npm run coverage:unit && npm run coverage:report",
-		"coverage:unit": "nyc --silent npm run test:base",
-		"coverage:report": "nyc report --reporter=text",
-		"build": "babel src --delete-dir-on-start --source-maps --out-dir=dist"
+		"watch:test": "cross-env DEBUG=@natlibfi/* NODE_ENV=test node --watch --test --experimental-test-coverage --test-reporter=spec './src/*.test.js' './src/**/*.test.js'",
+		"dev": "npm run watch:test",
+		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test npm run watch:test"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^9.1.4",
+		"@natlibfi/marc-record": "^10.0.0",
 		"@xmldom/xmldom": "^0.9.8",
 		"stream-json": "^1.9.1",
 		"xml2js": "^0.6.2",
-		"yargs": "^17.7.2"
+		"yargs": "^18.0.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.27.1",
-		"@babel/core": "^7.27.1",
-		"@babel/preset-env": "^7.27.1",
-		"@babel/register": "^7.27.1",
-		"@babel/runtime": "^7.27.1",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.5",
-		"babel-plugin-istanbul": "^7.0.0",
-		"chai": "^4.5.0",
-		"cross-env": "^7.0.3",
-		"debug": "^4.4.0",
-		"eslint": "^8.57.1",
-		"mocha": "^11.2.2",
-		"nyc": "^17.1.0"
-	},
-	"eslintConfig": {
-		"extends": [
-			"@natlibfi/melinda-backend"
-		]
-	},
-	"babel": {
-		"presets": [
-			[
-				"@babel/preset-env",
-				{
-					"targets": "maintained node versions"
-				}
-			]
-		],
-		"env": {
-			"test": {
-				"plugins": [
-					"istanbul"
-				]
-			}
-		}
-	},
-	"nyc": {
-		"include": [
-			"src/*.js"
-		],
-		"exclude": [
-			"*/*.spec.js",
-			"*/**/*.spec.js"
-		],
-		"reporter": [
-			"lcov",
-			"html"
-		],
-		"require": [
-			"@babel/register"
-		],
-		"sourceMap": false,
-		"instrument": false,
-		"lines": 80,
-		"statements": 80,
-		"functions": 80,
-		"branches": 80
+		"cross-env": "^10.1.0",
+		"debug": "^4.4.3",
+		"esbuild": "^0.25.12",
+		"eslint": "^9.39.1"
 	}
 }
